--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://manhhust2810.github.io/simple-layout",
   "name": "simple-layout",
   "version": "0.1.0",
   "author": "manhhust2810",
